WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213021
BaseAudioSharedUnit does not need to restart its audio unit at resume time.
https://bugs.webkit.org/show_bug.cgi?id=213021
Summary
BaseAudioSharedUnit does not need to restart its audio unit at resume time.
youenn fablet
Reported
2020-06-10 06:15:49 PDT
BaseAudioSharedUnit does not need to restart its audio unit at resume time.
Attachments
Patch
(1.72 KB, patch)
2020-06-10 06:27 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-06-10 06:27:56 PDT
Created
attachment 401537
[details]
Patch
EWS
Comment 2
2020-06-10 09:51:24 PDT
Committed
r262843
: <
https://trac.webkit.org/changeset/262843
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401537
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-10 09:52:18 PDT
<
rdar://problem/64213016
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug