BaseAudioSharedUnit does not need to restart its audio unit at resume time. https://bugs.webkit.org/show_bug.cgi?id=213021

Reviewed by Eric Carlson.

Removing a case that should not happen, and was guarded by ASSERT.
Keeping ASSERT to make sure we do not break this assumption.

* platform/mediastream/mac/BaseAudioSharedUnit.cpp:
(WebCore::BaseAudioSharedUnit::resume):
(WebCore::BaseAudioSharedUnit::suspend):


Canonical link: https://commits.webkit.org/225812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262843 268f45cc-cd09-0410-ab3c-d52691b4dbfc